# zuma_agent

./: .gitignore  README.md
backend/: Makefile  README.md  app.py  cache.py  db.py  env.example  models.py  pyproject.toml  queries.py  run_tests.py  schemas.py  setup_db.py  test_results.txt  user_service.py
backend/booking_agent/: agent.py  base_prompt.py  main.py  tools.py
backend/booking_agent/prompts/: base_prompt.py  booking_info_prompt.py  friendly_chat_prompt.py  get_property_info.py  router_prompt.py
backend/booking_agent/response/: agent_response.py
backend/globals/: __init__.py  agent_instance.py  database.py  openai_client.py
backend/leasing_queries/: __init__.py  pet_policy.py  pricing.py  unit_availability.py
backend/scripts/: dev.py  setup.py
backend/tests/: integration_tests.py  test_tools.py  test_unit_simple.py
database/: DB_CONNECTION_INFO.md  README.md  backup_data_20250905_190555.sql  docker-compose.pgadmin.yml  docker-compose.yml  env.example  manage.sh
database/docker/: Dockerfile
database/scripts/: backup.sh  restore.sh
database/scripts/init/: 01-create-tables.sql  02-create-leasing-tables.sql  03-migrate-community-id-to-string.sql  04-fix-community-id-consistency.sql  05-simple-community-id-fix.sql  06-add-user-id-to-messages.sql
database/tests/: README.md  integration_tests.sql  run_tests.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.tsx
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx  TypingIndicator.tsx  index.ts
(+1 files in other folders)
